--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
 
 <div id="password-container">
-    <div id="password-header">Addison Bono is the owner of this website. Sirron Leahcim also helped. if you are from GLMS, GET OUTTT</div>
+    <div id="password-header">michael N is the owner of this website.. if you are from GLMS, GET OUTTT</div>
     <input type="password" id="password-input" placeholder="Enter password..." />
     <button id="submit-password">Submit</button>
 </div>
