--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 </div>
 
 <script>
-    const correctPassword = "iGYATT99";
+    const correctPassword = "skibfan99";
     const passwordInput = document.getElementById('password-input');
     const submitPasswordButton = document.getElementById('submit-password');
     const passwordContainer = document.getElementById('password-container');
