--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
 
 <div id="password-container">
-    <div id="password-header">michael N is the owner of this website.. if you are from GLMS, GET OUTTT</div>
+    <div id="password-header">Loading...</div>
     <input type="password" id="password-input" placeholder="Enter password..." />
     <button id="submit-password">Submit</button>
 </div>
@@ -137,12 +137,28 @@
 </div>
 
 <script>
-    const correctPassword = "skibfan99";
+    let correctPassword = ""; // Initialize the password variable
+
+    // Fetch the title from GitHub
+    fetch('https://raw.githubusercontent.com/vexinity99/csshelpassets/refs/heads/main/title.txt')
+        .then(response => response.text())
+        .then(titleText => {
+            document.getElementById('password-header').innerText = titleText.trim(); // Set the title
+        });
+
+    // Fetch the password from GitHub
+    fetch('https://raw.githubusercontent.com/vexinity99/csshelpassets/refs/heads/main/password.txt')
+        .then(response => response.text())
+        .then(passwordText => {
+            correctPassword = passwordText.trim(); // Set the correct password
+        });
+
     const passwordInput = document.getElementById('password-input');
     const submitPasswordButton = document.getElementById('submit-password');
     const passwordContainer = document.getElementById('password-container');
     const chatContainer = document.getElementById('chat-container');
-    
+
+    // Event listener for password submission
     submitPasswordButton.addEventListener('click', () => {
         if (passwordInput.value === correctPassword) {
             passwordContainer.style.display = 'none';
